/*
Copyright © 2024 NAME HERE <EMAIL ADDRESS>
*/
syntax = "proto3";

package pbshop;

option go_package = "aike/proto/pbshop";

import "pbcommon/pbcommon.proto";


message ShopModel{
  int64 id = 1;
  string createdAt = 2;
  string updatedAt = 3;
  string name = 4;  // 公司名称
  string address = 5; // 地址
  string phone = 6;  // 手机号
  string businessLicenceUrl = 7;  // 营业执照地址
  string idcard1 = 8; //  身份证正面
  string idcard2 = 9; //  身份证反面
  ShopStatusEnum status = 10;
  string remark = 11;  // 备注  审核拒绝原因
  string creator = 12;  // 申请人
  string updater = 13;  // 审核人
}

enum ShopStatusEnum{
  UnKnown = 0;  // 未知
  Unchecked = 1;  // 待审核
  Checked = 2;  // 审核通过
  Deleted = 3;  // 删除
  UnUsed = 4;  // 低活跃度
}

message FindShopArgs{
  pbcommon.PageInfo pageInfo = 1;
  ShopModel query = 2;
}

message FindShopReply{
  pbcommon.EnumCode code = 1;
  string msg = 2;
  ShopModel data =3;
  repeated ShopModel list = 4;
  int64 total = 5;
}

service Shop {
  rpc CreateShop(ShopModel) returns(pbcommon.CommonResult){}
  rpc UpdateShop(ShopModel) returns(pbcommon.CommonResult){}
  rpc DeleteShop(pbcommon.IdArgs) returns(pbcommon.CommonResult){}
  rpc FindShopById(pbcommon.IdArgs) returns(FindShopReply){}
  rpc FindShopList(FindShopArgs) returns(FindShopReply){}
}